[project]
name = "PyTree Cookbook"
version = "0.1.0"
description = "Recipes for working with PyTrees in JAX + Equinox."
# url = ""
authors = [
    {name = "Matthew Leo", email = "mail@matthewleo.net"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    'jax',
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "equinox",
    "jax",
    "jaxtyping",
    "numpy",
    "tqdm",
]

[project.urls]
repository = "https://github.com/mlprt/pytree_cookbook"

[project.optional-dependencies]
typing = [
    'pyright',
    'typeguard',
]
tests = [
    'coverage',
    'pytest',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["pytree_cookbook"]

[tool.hatch.build.targets.wheel]
packages = ["pytree_cookbook"]

[tool.pyright]
include = ["pytree_cookbook"]
exclude = ["**/__pycache__"]
verboseOutput = true
reportMissingImports = true
reportMissingTypeStubs = true
reportAttributeAccessIssue = false

[tool.black]
target-version = ['py310', 'py311', 'py312']
include = 'pytree_cookbook\/.*\.pyi?$'
line-length = 88
