[project]
name = "jax-cookbook"
version = "0.1.0"
description = "A collection of recipes in JAX + Equinox."
# url = ""
authors = [
    {name = "Matthew Leo", email = "mail@matthewleo.net"}
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = [
    'jax',
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "equinox",
    "jax",
    "jaxtyping",
    "numpy",
    "tqdm",
]

[project.urls]
repository = "https://github.com/mlprt/jax-cookbook"

[project.optional-dependencies]
typing = [
    'pyright',
    'typeguard',
]
tests = [
    'coverage',
    'pytest',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["jax_cookbook"]

[tool.hatch.build.targets.wheel]
packages = ["jax_cookbook"]

[tool.pyright]
include = ["jax_cookbook"]
exclude = ["**/__pycache__"]
verboseOutput = true
reportMissingImports = true
reportMissingTypeStubs = true
reportAttributeAccessIssue = false

[tool.black]
target-version = ['py310', 'py311', 'py312']
include = 'jax_cookbook\/.*\.pyi?$'
line-length = 88
